--- a/online-bookstore/app/views/publishers/index.html.haml
+++ b/online-bookstore/app/views/publishers/index.html.haml
@@ -3,12 +3,14 @@
 %table
   %thead
     %tr
+      %th Name
       %th Address
       %th Telephone
       %th{:colspan => "3"}
   %tbody
     - @publishers.each do |publisher|
       %tr
+        %td= publisher.Name
         %td= publisher.address
         %td= publisher.telephone
         %td= link_to 'Show', publisher
