--- a/online-bookstore/app/views/layouts/application.html.haml
+++ b/online-bookstore/app/views/layouts/application.html.haml
@@ -9,3 +9,5 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = yield
+    = link_to "Show Cart", cart_show_path
+
