--- a/online-bookstore/app/views/books/show.html.haml
+++ b/online-bookstore/app/views/books/show.html.haml
@@ -26,4 +26,4 @@
 = link_to 'Edit', edit_book_path(@book)
 |
 = link_to 'Back', books_path
-= button_to "Add to shopping cart", action: "cart" , :ISBN => @book.ISBN
+= button_to "Add to shopping cart", cart_add_to_cart_path, params: { ISBN: @book.ISBN }
