--- a/online-bookstore/app/views/books/show.html.haml
+++ b/online-bookstore/app/views/books/show.html.haml
@@ -10,10 +10,7 @@
   = @book.category
 %p
   %strong Selling price:
-  = @book.selling_price
-%p
-  %strong Minimum threshold:
-  = @book.Minimum_threshold
+  = @book.selling_price 
 %p
   %strong Available copies count:
   = @book.Available_copies_count
@@ -26,4 +23,7 @@
 = link_to 'Edit', edit_book_path(@book)
 |
 = link_to 'Back', books_path
+%label{for: "quantity"} Quantity
+%input{id: "number", max: "#{@book.Available_copies_count}", min: "1", value: "1", name: "quantity", type: "number"}/
 = button_to "Add to shopping cart", cart_add_to_cart_path, params: { ISBN: @book.ISBN }
+%br/
