--- a/online-bookstore/app/views/books/show.html.haml
+++ b/online-bookstore/app/views/books/show.html.haml
@@ -23,7 +23,11 @@
 = link_to 'Edit', edit_book_path(@book)
 |
 = link_to 'Back', books_path
-%label{for: "quantity"} Quantity
-%input{id: "number", max: "#{@book.Available_copies_count}", min: "1", value: "1", name: "quantity", type: "number"}/
-= button_to "Add to shopping cart", cart_add_to_cart_path, params: { ISBN: @book.ISBN }
+
+= form_with url: cart_add_to_cart_path do |form|
+  = form.hidden_field :ISBN, value: @book.ISBN
+  = form.label :quantity
+  = form.number_field :quantity, value: 1, min: 1, step: 1
+  = form.submit 'Add to shopping cart'
+  
 %br/
