Add edit quantity for each book in cart.

--- a/online-bookstore/app/views/books/show.html.haml
+++ b/online-bookstore/app/views/books/show.html.haml
@@ -27,7 +27,7 @@
 = form_with url: cart_add_to_cart_path do |form|
   = form.hidden_field :ISBN, value: @book.ISBN
   = form.label :quantity
-  = form.number_field :quantity, value: 1, min: 1, step: 1
+  = form.number_field :quantity, value: 1, min: 1, max: @book.Available_copies_count, step: 1
   = form.submit 'Add to shopping cart'
   
 %br/
