--- a/online-bookstore/app/views/cart/show.html.haml
+++ b/online-bookstore/app/views/cart/show.html.haml
@@ -12,15 +12,15 @@
    %th{:colspan => "3"}
  %tbody
   -@result.zip(@book_quantity).each do |row, quantity|
-   %tr
-   -row.each do |field|
-    %td= field
-   %td= link_to 'Remove', controller: "cart", action: "delete", params: {ISBN: row.first}
-   %td
-    = form_with url: cart_edit_path do |form|
-     = form.hidden_field :ISBN, value: row.first
-     = form.number_field :newquantity, value: quantity, min: 1, max: row[4], step: 1
-     = form.submit 'Edit quantity'
+   %tr{:style => (quantity.to_i > row[4] ? "background-color: red;" : "")}
+    -row.each do |field|
+     %td= field
+    %td= link_to 'Remove', controller: "cart", action: "delete", params: {ISBN: row.first}
+    %td
+     = form_with url: cart_edit_path do |form|
+      = form.hidden_field :ISBN, value: row.first
+      = form.number_field :newquantity, value: quantity, min: 1, max: row[4], step: 1
+      = form.submit 'Edit quantity'
 %br
 %p= 'total number of books:' 
 %p #{@result.count}
