--- a/online-bookstore/app/views/orders/index.html.haml
+++ b/online-bookstore/app/views/orders/index.html.haml
@@ -8,7 +8,10 @@
       %th Confirmed
       %th Book isbn
       %th Quantity
-      %th{:colspan => "3"}
+      - if logged_in? && current_user.isManager
+        %th{:colspan => "5"}
+      - else
+        %th{:colspan => "3"}
   %tbody
     - @orders.each do |order|
       %tr
@@ -17,6 +20,12 @@
         %td= order.confirmed
         %td= order.BOOK_ISBN
         %td= order.quantity
+
+
+        - if logged_in? && current_user.isManager
+          %td= link_to 'Confirm', orders_confirm_url(:id =>order.id)
+          %td= link_to 'UnConfirm', orders_unconfirm_url(:id =>order.id)
+
         %td= link_to 'Show', order
         %td= link_to 'Edit', edit_order_path(order)
         %td= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }
