--- a/online-bookstore/app/views/authors/index.html.haml
+++ b/online-bookstore/app/views/authors/index.html.haml
@@ -6,6 +6,7 @@
       %th Author name
       %th{:colspan => "3"}
   %tbody
+    = will_paginate
     - @authors.each do |author|
       %tr
         %td= author.Author_name
@@ -13,4 +14,5 @@
         %td= link_to 'Edit', edit_author_path(author)
         %td= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
+= will_paginate
 = link_to 'New Author', new_author_path
