--- a/online-bookstore/app/views/books/index.html.haml
+++ b/online-bookstore/app/views/books/index.html.haml
@@ -13,6 +13,8 @@
       %th Publish year
       %th{:colspan => "3"}
   %tbody
+
+    = will_paginate
     - @books.each do |book|
       %tr
         %td= book.ISBN
@@ -27,4 +29,5 @@
         %td= link_to 'Edit', edit_book_path(book)
         %td= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
+= will_paginate
 = link_to 'New Book', new_book_path
