--- a/online-bookstore/app/views/orders/index.html.haml
+++ b/online-bookstore/app/views/orders/index.html.haml
@@ -13,6 +13,7 @@
       - else
         %th{:colspan => "3"}
   %tbody
+    = will_paginate
     - @orders.each do |order|
       %tr
         %td= order.date_submitted
@@ -30,4 +31,5 @@
         %td= link_to 'Edit', edit_order_path(order)
         %td= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
+= will_paginate
 = link_to 'New Order', new_order_path
