--- a/online-bookstore/app/views/users/index.html.haml
+++ b/online-bookstore/app/views/users/index.html.haml
@@ -13,6 +13,7 @@
       %th Date joined
       %th{:colspan => "3"}
   %tbody
+    = will_paginate
     - @users.each do |user|
       %tr
         %td= user.email
@@ -33,4 +34,5 @@
           %td= link_to 'Edit', edit_user_path(user)
           %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
+= will_paginate
 = link_to 'New User', new_user_path
