--- a/online-bookstore/app/views/users/show.html.haml
+++ b/online-bookstore/app/views/users/show.html.haml
@@ -3,9 +3,6 @@
   %strong Email:
   = @user.email
 %p
-  %strong Password:
-  = @user.password
-%p
   %strong First name:
   = @user.first_name
 %p
@@ -23,6 +20,8 @@
 %p
   %strong Date joined:
   = @user.date_joined
-= link_to 'Edit', edit_user_path(@user)
-|
+
+-if current_user.id == @user.id
+  = link_to 'Edit', edit_user_path(@user)
+  |
 = link_to 'Back', users_path
