--- a/online-bookstore/app/views/authors/index.html.haml
+++ b/online-bookstore/app/views/authors/index.html.haml
@@ -11,8 +11,9 @@
       %tr
         %td= author.Author_name
         %td= link_to 'Show', author
-        %td= link_to 'Edit', edit_author_path(author)
-        %td= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' }
+        -if current_user.isManager
+          %td= link_to 'Edit', edit_author_path(author)
+          %td= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = will_paginate
 = link_to 'New Author', new_author_path
