--- a/online-bookstore/app/views/authors/show.html.haml
+++ b/online-bookstore/app/views/authors/show.html.haml
@@ -2,6 +2,7 @@
 %p
   %strong Author name:
   = @author.Author_name
-= link_to 'Edit', edit_author_path(@author)
-|
+-if current_user.isManager
+  = link_to 'Edit', edit_author_path(@author)
+  |
 = link_to 'Back', authors_path
