--- a/online-bookstore/app/views/books/show.html.haml
+++ b/online-bookstore/app/views/books/show.html.haml
@@ -11,9 +11,10 @@
 %p
   %strong Selling price:
   = @book.selling_price
-%p
-  %strong Minimum threshold:
-  = @book.Minimum_threshold
+-if current_user.isManager
+  %p
+    %strong Minimum threshold:
+    = @book.Minimum_threshold
 %p
   %strong Available copies count:
   = @book.Available_copies_count
@@ -26,6 +27,8 @@
 %p
   %strong Authors:
   = @book_authors.map(&:Author_name).reduce("") {|s, a| s += a + ', '}.chomp(', ')
-= link_to 'Edit', edit_book_path(@book)
-|
+
+-if current_user.isManager
+  = link_to 'Edit', edit_book_path(@book)
+  |
 = link_to 'Back', books_path
