--- a/online-bookstore/app/views/publishers/index.html.haml
+++ b/online-bookstore/app/views/publishers/index.html.haml
@@ -15,8 +15,9 @@
         %td= publisher.address
         %td= publisher.telephone
         %td= link_to 'Show', publisher
-        %td= link_to 'Edit', edit_publisher_path(publisher)
-        %td= link_to 'Destroy', publisher, method: :delete, data: { confirm: 'Are you sure?' }
+        -if current_user.isManager
+          %td= link_to 'Edit', edit_publisher_path(publisher)
+          %td= link_to 'Destroy', publisher, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = will_paginate
 = link_to 'New Publisher', new_publisher_path
