--- a/online-bookstore/app/views/users/index.html.haml
+++ b/online-bookstore/app/views/users/index.html.haml
@@ -4,12 +4,11 @@
   %thead
     %tr
       %th Email
-      %th Password
       %th First name
       %th Last name
       %th Phone
       %th Address
-      %th Ismanager
+      %th Is Manager
       %th Date joined
       %th{:colspan => "3"}
   %tbody
@@ -17,7 +16,6 @@
     - @users.each do |user|
       %tr
         %td= user.email
-        %td= user.password
         %td= user.first_name
         %td= user.last_name
         %td= user.phone
@@ -31,8 +29,7 @@
 
         %td= link_to 'Show', user
         - if logged_in? && current_user.isManager
-          %td= link_to 'Edit', edit_user_path(user)
           %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = will_paginate
-= link_to 'New User', new_user_path
+= link_to 'Register new user', new_user_path
