--- a/online-bookstore/app/views/authors/index.html.haml
+++ b/online-bookstore/app/views/authors/index.html.haml
@@ -1,12 +1,14 @@
 %p#notice= notice
 %h1 Authors
-%table
+= link_to 'New Author', new_author_path, class: "btn btn-default pull-right"
+%table.table.table-bordered.table-hover
   %thead
     %tr
       %th Author name
       %th{:colspan => "3"}
   %tbody
-    = will_paginate
+    .text-center
+      = will_paginate
     - @authors.each do |author|
       %tr
         %td= author.Author_name
@@ -14,5 +16,6 @@
         %td= link_to 'Edit', edit_author_path(author)
         %td= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= will_paginate
-= link_to 'New Author', new_author_path
+.text-center
+  = will_paginate
+
