--- a/online-bookstore/app/views/books/index.html.haml
+++ b/online-bookstore/app/views/books/index.html.haml
@@ -1,20 +1,46 @@
 %p#notice= notice
 %h1 Books
-%table
+
+= form_tag books_path, :method => 'get' do
+  .container-fluid.well
+    %h4 Advanced Search
+    .form-row
+      .col-sm-4
+        = text_field_tag :name, params[:name], placeholder: "Title", class: "form-control"
+      .col-sm-4
+        = text_field_tag :author, params[:author], placeholder: "Author", class: "form-control"
+      .col-sm-4
+        = text_field_tag :publisher, params[:publisher], placeholder: "Publisher", class: "form-control"
+    .form-row
+      .col-sm-4
+        = select_tag :category, options_for_select(["Science", "Art", "Religion", "History", "Geography"]), include_blank: "Select Category", class: "form-control"
+      .col-sm-4
+        = number_field_tag :price_from, params[:price_from], placeholder: "Price Lower Range", class: "form-control"
+      .col-sm-4
+        = number_field_tag :price_to, params[:price_to], placeholder: "Price Upper Range", class: "form-control"
+    .form-row
+      .col-sm-4
+        = number_field_tag :publish_date, params[:publish_date], placeholder: "Publish Year", class: "form-control"
+      .col-sm-8.pull-right
+        = submit_tag  "Search", :name => nil, class: "btn btn-default pull-right"
+    .form-row
+      .col-sm-11
+%table.table.table-bordered.table-hover
   %thead
     %tr
-      %th ISBN
+      %th{width: "100px"} ISBN
       %th Title
       %th Category
       %th Selling price
       %th Minimum threshold
       %th Available copies count
       %th Publisher name
-      %th Publish year
+      %th{width: "90px"} Publish year
       %th{:colspan => "3"}
   %tbody
-
-    = will_paginate
+    = link_to 'New Book', new_book_path, class: "btn btn-default pull-right"
+    .text-center
+      = will_paginate
     - @books.each do |book|
       %tr
         %td= book.ISBN
@@ -29,5 +55,6 @@
         %td= link_to 'Edit', edit_book_path(book)
         %td= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= will_paginate
-= link_to 'New Book', new_book_path
+.text-center
+  = will_paginate
+
