--- a/online-bookstore/app/views/orders/index.html.haml
+++ b/online-bookstore/app/views/orders/index.html.haml
@@ -1,8 +1,9 @@
 %p#notice= notice
 %h1 Orders
-%table
+%table.table.table-bordered.table-hover
   %thead
     %tr
+      %th ID
       %th Date submitted
       %th Estimated arrival date
       %th Confirmed
@@ -13,9 +14,12 @@
       - else
         %th{:colspan => "3"}
   %tbody
-    = will_paginate
+    = link_to 'New Order', new_order_path, class: "btn btn-default pull-right"
+    .text-center
+      = will_paginate
     - @orders.each do |order|
       %tr
+        %td= order.id
         %td= order.date_submitted
         %td= order.estimated_arrival_date
         %td= order.confirmed
@@ -31,5 +35,6 @@
         %td= link_to 'Edit', edit_order_path(order)
         %td= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= will_paginate
-= link_to 'New Order', new_order_path
+.text-center
+  = will_paginate
+
