--- a/online-bookstore/app/views/publishers/index.html.haml
+++ b/online-bookstore/app/views/publishers/index.html.haml
@@ -1,6 +1,7 @@
 %p#notice= notice
 %h1 Publishers
-%table
+= link_to 'New Publisher', new_publisher_path, class: "btn btn-default pull-right"
+%table.table.table-bordered.table-hover
   %thead
     %tr
       %th Name
@@ -8,7 +9,8 @@
       %th Telephone
       %th{:colspan => "3"}
   %tbody
-    = will_paginate
+    .text-center
+      = will_paginate
     - @publishers.each do |publisher|
       %tr
         %td= publisher.Name
@@ -18,5 +20,5 @@
         %td= link_to 'Edit', edit_publisher_path(publisher)
         %td= link_to 'Destroy', publisher, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= will_paginate
-= link_to 'New Publisher', new_publisher_path
+.text-center
+  = will_paginate
