--- a/online-bookstore/app/views/purchases/index.html.haml
+++ b/online-bookstore/app/views/purchases/index.html.haml
@@ -1,6 +1,7 @@
 %p#notice= notice
 %h1 Purchases
-%table
+= link_to 'New Purchase', new_purchase_path, class: "btn btn-default pull-right"
+%table.table.table-bordered.table-hover
   %thead
     %tr
       %th User
@@ -10,7 +11,8 @@
       %th Date of purchase
       %th{:colspan => "3"}
   %tbody
-    = will_paginate
+    .text-center
+      = will_paginate
     - @purchases.each do |purchase|
       %tr
         %td= purchase.User
@@ -22,5 +24,6 @@
         %td= link_to 'Edit', edit_purchase_path(purchase)
         %td= link_to 'Destroy', purchase, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= will_paginate
-= link_to 'New Purchase', new_purchase_path
+.text-center
+  = will_paginate
+
