--- a/online-bookstore/app/views/users/index.html.haml
+++ b/online-bookstore/app/views/users/index.html.haml
@@ -1,23 +1,23 @@
 %p#notice= notice
 %h1 Users
-%table
+= link_to 'New User', new_user_path, class: "btn btn-default pull-right"
+%table.table.table-bordered.table-hover
   %thead
     %tr
       %th Email
-      %th Password
       %th First name
       %th Last name
       %th Phone
       %th Address
       %th Ismanager
       %th Date joined
-      %th{:colspan => "3"}
+      %th{:colspan => "5"} Actions
   %tbody
-    = will_paginate
+    .text-center
+      = will_paginate
     - @users.each do |user|
       %tr
         %td= user.email
-        %td= user.password
         %td= user.first_name
         %td= user.last_name
         %td= user.phone
@@ -34,5 +34,6 @@
           %td= link_to 'Edit', edit_user_path(user)
           %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= will_paginate
-= link_to 'New User', new_user_path
+.text-center
+  = will_paginate
+
