--- a/online-bookstore/app/views/authors/_form.html.haml
+++ b/online-bookstore/app/views/authors/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with(model: author, local: true) do |form|
+= form_with(model: author, local: true, class: "form-horizontal") do |form|
   - if author.errors.any?
     #error_explanation
       %h2
@@ -7,8 +7,10 @@
       %ul
         - author.errors.full_messages.each do |message|
           %li= message
-  .field
-    = form.label :Author_name
-    = form.text_field :Author_name
+  .form-group
+    = form.label :Author_name, class: "control-label col-sm-2"
+    .col-sm-10
+      = form.text_field :Author_name, class: "form-control"
   .actions
-    = form.submit
+    %br
+    = form.submit class: "btn btn-default col-sm-2 pull-right"
