--- a/online-bookstore/app/views/authors/new.html.haml
+++ b/online-bookstore/app/views/authors/new.html.haml
@@ -1,3 +1,3 @@
 %h1 New Author
 = render 'form', author: @author
-= link_to 'Back', authors_path
+= link_to 'Back', authors_path, class: "btn btn-default"
