--- a/online-bookstore/app/views/orders/_form.html.haml
+++ b/online-bookstore/app/views/orders/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with(model: order, local: true) do |form|
+= form_with(model: order, local: true, class: 'form-horizontal') do |form|
   - if order.errors.any?
     #error_explanation
       %h2
@@ -7,17 +7,18 @@
       %ul
         - order.errors.full_messages.each do |message|
           %li= message
-  .field
-    = form.label :estimated_arrival_date
-    = form.date_select :estimated_arrival_date
-  .field
-    = form.label :confirmed
-    = form.check_box :confirmed
-  .field
-    = form.label :BOOK_ISBN
-    = form.text_field :BOOK_ISBN
-  .field
-    = form.label :quantity
-    = form.number_field :quantity
+  .form-group
+    = form.label :estimated_arrival_date, class: "control-label col-sm-2"
+    .col-sm-10
+      = form.date_select :estimated_arrival_date, {}, {class: "form-control datepicker"}
+  .form-group
+    = form.label :BOOK_ISBN, class: "control-label col-sm-2"
+    .col-sm-10
+      = form.text_field :BOOK_ISBN, class: "form-control"
+  .form-group
+    = form.label :quantity, class: "control-label col-sm-2"
+    .col-sm-10
+      = form.number_field :quantity, class: "form-control", min: 1, step: 1, value: 1
   .actions
-    = form.submit
+    %br
+    = form.submit class: "btn btn-default col-sm-2 pull-right"
