--- a/online-bookstore/app/views/orders/new.html.haml
+++ b/online-bookstore/app/views/orders/new.html.haml
@@ -1,3 +1,3 @@
 %h1 New Order
 = render 'form', order: @order
-= link_to 'Back', orders_path
+= link_to 'Back', orders_path, class: "btn btn-default"
