--- a/online-bookstore/app/views/publishers/_form.html.haml
+++ b/online-bookstore/app/views/publishers/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with(model: publisher, local: true) do |form|
+= form_with(model: publisher, local: true, class: "form-horizontal") do |form|
   - if publisher.errors.any?
     #error_explanation
       %h2
@@ -7,14 +7,18 @@
       %ul
         - publisher.errors.full_messages.each do |message|
           %li= message
-  .field
-    = form.label :Name
-    = form.text_field :Name
-  .field
-    = form.label :address
-    = form.text_field :address
-  .field
-    = form.label :telephone
-    = form.text_field :telephone
+  .form-group
+    = form.label :Name, class: "control-label col-sm-2"
+    .col-sm-10
+      = form.text_field :Name, class: "form-control"
+  .form-group
+    = form.label :address, class: "control-label col-sm-2"
+    .col-sm-10
+      = form.text_field :address, class: "form-control"
+  .form-group
+    = form.label :telephone, class: "control-label col-sm-2"
+    .col-sm-10
+      = form.text_field :telephone, class: "form-control"
   .actions
-    = form.submit
+    %br
+    = form.submit class: "btn btn-default col-sm-2 pull-right"
