--- a/online-bookstore/app/views/publishers/new.html.haml
+++ b/online-bookstore/app/views/publishers/new.html.haml
@@ -1,3 +1,3 @@
 %h1 New Publisher
 = render 'form', publisher: @publisher
-= link_to 'Back', publishers_path
+= link_to 'Back', publishers_path, class: "btn btn-default"
