--- a/online-bookstore/app/views/users/index.html.haml
+++ b/online-bookstore/app/views/users/index.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 %h1 Users
-= link_to 'New User', new_user_path, class: "btn btn-default pull-right"
+= link_to 'Register New User', new_user_path, class: "btn btn-default pull-right"
 %table.table.table-bordered.table-hover
   %thead
     %tr
@@ -36,5 +36,4 @@
 .text-center
   = will_paginate
 
-= link_to 'Register new user', new_user_path
 
