--- a/online-bookstore/app/views/purchases/checkout.html.haml
+++ b/online-bookstore/app/views/purchases/checkout.html.haml
@@ -1,1 +1,12 @@
 %h1 Confirm purchase
+%p
+  %strong Credit card number:
+  =number_field_tag(id: :credit_card_no, value: @number, type: "number" , disabled: false)
+%p
+  %strong Expiry date:
+  =date_field("credit_card", "expiry_date", min: Date.today, value: @date)
+= button_to "Confirm Order", action: "confirm_checkout", remote: true, params: {credit_card_no: @number, expiry_date: @date}
+-if flash[:notice]
+  .notice= flash[:notice]
+-if flash[:danger]
+  .danger= flash[:danger]
