--- a/online-bookstore/app/assets/stylesheets/application.css.sass
+++ b/online-bookstore/app/assets/stylesheets/application.css.sass
@@ -16,6 +16,7 @@
 
 @import "bootstrap-sprockets"
 @import "bootstrap"
+@import "font-awesome"
 
 body
   // background-image: image-url("books.jpeg")
