--- a/online-bookstore/app/views/users/edit.html.haml
+++ b/online-bookstore/app/views/users/edit.html.haml
@@ -1,5 +1,3 @@
 %h1 Editing User
 = render 'form', user: @user
-= link_to 'Show', @user
-|
-= link_to 'Back', users_path
+= link_to 'Back', :back, class: "btn btn-default"
