--- a/online-bookstore/app/views/users/new.html.haml
+++ b/online-bookstore/app/views/users/new.html.haml
@@ -1,3 +1,3 @@
 %h1 New User
 = render 'form', user: @user
-= link_to 'Back', users_path, class: "btn btn-default"
+= link_to 'Back', :back, class: "btn btn-default"
