--- a/online-bookstore/app/views/layouts/application.html.haml
+++ b/online-bookstore/app/views/layouts/application.html.haml
@@ -59,7 +59,7 @@
                   = fa_icon "gbp"
                   Purchases
               %li{class: controller_name == "cart"? "active":""}
-                = link_to "cart_path" do #, cart_show_path 
+                = link_to cart_show_path do #, cart_show_path 
                   = fa_icon "shopping-cart"
                   Cart
               %li.dropdown
