--- a/online-bookstore/app/views/layouts/application.html.haml
+++ b/online-bookstore/app/views/layouts/application.html.haml
@@ -76,5 +76,8 @@
         / .container-fluid
     %br
 
+
     .container.well.bg-white
+      - flash.each do |key, value|
+        %div{:class => "alert alert-#{key}"}= value
       = yield
