--- a/online-bookstore/app/views/orders/_form.html.haml
+++ b/online-bookstore/app/views/orders/_form.html.haml
@@ -10,7 +10,7 @@
   .form-group
     = form.label :estimated_arrival_date, class: "control-label col-sm-2"
     .col-sm-10
-      = form.date_select :estimated_arrival_date, {}, {class: "form-control datepicker"}
+      = form.date_select :estimated_arrival_date, {}, {class: "form-control datepicker", style: "float: left; width: 150px;"}
   .form-group
     = form.label :BOOK_ISBN, class: "control-label col-sm-2"
     .col-sm-10
